PUSH NOTE : 3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md
@@ -14,7 +14,7 @@ Cell culture techniques began in the 1800s, but the ability to keep a cell alive
 ![[PPT_s27@2x.png|PPT_s27@2x.png]]
 
 > [!info]- Beating Heart in a Dish
-In 1912, Alexis Carrel claimed that he was able to demonstrate the immortality of somatic differentiated cells in culture with his famous chick beating heart culture.  Having won the Nobel Prize for his work on suturing of blood vessels, Carrel created an in vitro environment in which he could pump fluid to a disembodied organ. He fed a chick beating heart culture with growth media for almost 40 by years, yet no one else could replicate his results. It was later discovered by Hayflick and Moorhead,  that in fact the cells were not immortal, but that most probably the culture media was either contaminated with viruses that transformed the heart cells into immortal cells, activating telomerase, or that he was continually supplying the culture with fresh stem cells as they reside in the chicken blood he was using for culture. Students may want to reflect on the scientific method and consider how  Carrel have conducted his experiment to eliminate any change of contamination- What was missing in his experimental design? Later Hayflick and Moorhead proposed the existence of a limit of cell divisions and the idea of something that counts the number of divisions. 
+> In 1912, Alexis Carrel claimed that he was able to demonstrate the immortality of somatic differentiated cells in culture with his famous chick beating heart culture.  Having won the Nobel Prize for his work on suturing of blood vessels, Carrel created an in vitro environment in which he could pump fluid to a disembodied organ. He fed a chick beating heart culture with growth media for almost 40 by years, yet no one else could replicate his results. It was later discovered by Hayflick and Moorhead,  that in fact the cells were not immortal, but that most probably the culture media was either contaminated with viruses that transformed the heart cells into immortal cells, activating telomerase, or that he was continually supplying the culture with fresh stem cells as they reside in the chicken blood he was using for culture. Students may want to reflect on the scientific method and consider how  Carrel have conducted his experiment to eliminate any change of contamination- What was missing in his experimental design? Later Hayflick and Moorhead proposed the existence of a limit of cell divisions and the idea of something that counts the number of divisions. 
 > 
 > In 1938, Carrel is pictured on the cover of Time magazine f with Charles Lindbergh, first aviator to fly from New York to Paris without stopping, as the two mean shared a  fascination with immortality and pushing the bounds of human physiology. Lindbergh had a sister-in-law  ailing from heart failure.  It is important to note that many science fiction writers have used Carrel in his work to discuss dystopias about human futures. Journalist David M. Friedman wrote the book “ The Immortalists,” which details the two men’s fascination with immortality, but only for the right people. They were both eugenicists. Lindbergh was quoted as saying in his 1948 treatise “Of Flight and Life” 
 > 
