PUSH NOTE : 3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md
@@ -11,7 +11,7 @@ aliases:
 
 Cell culture techniques began in the 1800s, but the ability to keep a cell alive in culture was the accomplishment of Ross Harrison, who in 1907 cultured a nerve cell for several weeks using the “hanging drop method.” Over the next forty years a number of inventions and discoveries led to further advances in cell culture. Thomas Montrose Burrows discovered the medium of chicken embryo plasma clots as being essential for propagation of cells in culture, and coined the term “tissue culture,” Alexis Carrel was the first to establish sterile technique for cell purity, George Gey in 1933 was the first to invent the cell culture roller, which provided adequate air flow, and Wilton Earle in 1943 established the first continuously growing culture of mammalian cells, and later established the first clonal mouse immortalized cells, known as the L cell line ([Maienschein, 2005](http://www.amazon.com/Whose-View-Life-Embryos-Cloning/dp/0674017668)). (<mark style="background: #FFF3A3A6;">[Slide 27: Be Still My Beating Heart](http://stemcellcurriculum.org/slidesets.html)</mark>)
 
-![[PPT_s27@2x.png|PPT_s27@2x.png]]
+![[PPT_s27.png|PPT_s27.png]]
 
 > [!info]- Beating Heart in a Dish
 > In 1912, Alexis Carrel claimed that he was able to demonstrate the immortality of somatic differentiated cells in culture with his famous chick beating heart culture.  Having won the Nobel Prize for his work on suturing of blood vessels, Carrel created an in vitro environment in which he could pump fluid to a disembodied organ. He fed a chick beating heart culture with growth media for almost 40 by years, yet no one else could replicate his results. It was later discovered by Hayflick and Moorhead,  that in fact the cells were not immortal, but that most probably the culture media was either contaminated with viruses that transformed the heart cells into immortal cells, activating telomerase, or that he was continually supplying the culture with fresh stem cells as they reside in the chicken blood he was using for culture. Students may want to reflect on the scientific method and consider how  Carrel have conducted his experiment to eliminate any change of contamination- What was missing in his experimental design? Later Hayflick and Moorhead proposed the existence of a limit of cell divisions and the idea of something that counts the number of divisions. 
@@ -28,9 +28,9 @@ Cell culture techniques began in the 1800s, but the ability to keep a cell alive
 
 A cell line is a collection of cells that can grow outside the body, while a cell strain is a clonal population of cells that arises from a single cell or small group of cells that have been propagated, or cultured, in a Petri dish. In the early days of “cell culture,” cell lines were heterogeneous, but as purification methods improved, the term “cell line” become synonymous with “cell strain.” As the lineage of cells in this culture can be traced back to the original single cell used to propagate the culture, the word “line” refers to this lineage and the clonal relationship of the cells, because they were generated through cell division from the original cell. Because the cells are growing outside of the body and in a Petri dish, we refer to any experiments done with these cells as being done in vitro, referring to the historic nature of cell culture using glass test tubes (vitrum is Latin for glass). Each cell line originates from living tissue or cells that grow in vivo, be they animal or human. Thus, each cell line represents the unique characteristics of that organism and that specific individual from which it originated ([NCBI, 2014](http://pubmedcommonsblog.ncbi.nlm.nih.gov/2014/05/16/spotlight-on-amanda-capes-davis-setting-the-cell-line-record-straight/)). (<mark style="background: #FFF3A3A6;">[Slide 28 & 29: ATTC](http://stemcellcurriculum.org/slidesets.html)</mark>)
 
-![[PPT_s28@2x.png|PPT_s28@2x.png]]
+![[PPT_s28.png|PPT_s28.png]]
 
-![[2024-01-15 at 17.29.32@2x.png|2024-01-15 at 17.29.32@2x.png]]
+![[vid_eurostemcell-cellculture.png|vid_eurostemcell-cellculture.png]]
 
 <mark style="background: #FFF3A3A6;">Video EuroStemCell. Cell Culture. [Link](https://www.eurostemcell.org/cell-culture) (6 min)]</mark>
 
