PUSH NOTE : 8. Altruistic Donor, Paid Research Subject, or Savvy Negotiator.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/8. Altruistic Donor, Paid Research Subject, or Savvy Negotiator.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/8. Altruistic Donor, Paid Research Subject, or Savvy Negotiator.md
@@ -6,8 +6,7 @@ aliases:
   - Section VIII.
 title: 8. Altruistic Donor, Paid Research Subject, or Savvy Negotiator
 ---
-
-As biomedical research shifted from a general public good to a lucrative industry, public support and expectations regarding gifting and donation of bodily tissues also shifted (<mark style="background: #ADCCFFA6;">[Knoppers & Laberge, 1995](http://www.ncbi.nlm.nih.gov/pubmed/7500515)</mark>). In the 1930s, malnutrition, infectious agents, and environmental toxins were the cause of most human morbidity and mortality. The emergence of antibiotics was heralded as a medical miracle, entering the mainstream media in the form of the film Dr. Ehrlich’s Magic Bullet. Public outreach was also accomplished through education media, in the form of public health campaigns using posters to promote the elimination of communicable disease (<mark style="background: #ADCCFFA6;">[Dieterle, 1940](http://www.imdb.com/title/tt0032413/); [NIH Visual Culture and Health Posters](https://www.nlm.nih.gov/exhibition/visualculture/index.html)</mark>). Similarly, the development of childhood vaccines stoked public interest in biomedical research, providing yet another success story. Therefore, when cancer was the next scourge to be attacked, most people willingly provided samples for research or volunteered themselves as test subjects. This kind of altruism can be seen most clearly in the documentary film The Way of all Flesh by Adam Curtis, where prison inmates are asked about their participation in a study involving subcutaneous injection of HeLa cells to determine if cancer is infectious. The inmates remark that they are compelled to do something for the public good and see their participation as a form of redemption. But what is perhaps not so clear, is that even these subjects most likely obtained some direct benefit, in the form of reduced sentences or early parole review.
+As biomedical research shifted from a general public good to a lucrative industry, public support and expectations regarding gifting and donation of bodily tissues also shifted ([Knoppers & Laberge, 1995](http://www.ncbi.nlm.nih.gov/pubmed/7500515)). In the 1930s, malnutrition, infectious agents, and environmental toxins were the cause of most human morbidity and mortality. The emergence of antibiotics was heralded as a medical miracle, entering the mainstream media in the form of the film Dr. Ehrlich’s Magic Bullet. Public outreach was also accomplished through education media, in the form of public health campaigns using posters to promote the elimination of communicable disease ([Dieterle, 1940](http://www.imdb.com/title/tt0032413/); [NIH Visual Culture and Health Posters](https://www.nlm.nih.gov/exhibition/visualculture/index.html)). Similarly, the development of childhood vaccines stoked public interest in biomedical research, providing yet another success story. Therefore, when cancer was the next scourge to be attacked, most people willingly provided samples for research or volunteered themselves as test subjects. This kind of altruism can be seen most clearly in the documentary film The Way of all Flesh by Adam Curtis, where prison inmates are asked about their participation in a study involving subcutaneous injection of HeLa cells to determine if cancer is infectious. The inmates remark that they are compelled to do something for the public good and see their participation as a form of redemption. But what is perhaps not so clear, is that even these subjects most likely obtained some direct benefit, in the form of reduced sentences or early parole review.
 
 <mark style="background: #FFF3A3A6;">Film: Curtis, A. 1997. Modern Times: The Way of All Flesh. Aired on BBC. Modern Times Series, Editor Stephen Lambert. (52 minutes). [Link](http://www.archive.org/details/AdamCurtisTheWayofAllFlesh/)</mark>
 
@@ -15,7 +14,7 @@ Similarly, the depiction of altruistic research subjects by bioethicist Laurie Z
 
 <mark style="background: #FFF3A3A6;">World Stem Cell Summit Video Conference Session: Sugarman, J., Zoloth, L. & Hempel, C. October 4 2010. FullviewMedia. The Immortal Life of Henrietta Lacks - lessons for stem cell researchers and patients. World Stem Cell Summit, Pasadena, CA. (Time Stamp 38:00min- 50:00min) [Link](http://www.stemcellcurriculum.org/video_world-stem-cell-conference.html)</mark>
 
-In her presentation, she presumes that if Henrietta Lacks had realized how many children’s lives would be saved by the polio vaccine, she would not have wanted a cent for her part in creating the cell line that led to its development. She also describes a young Jimmy Sarkett, the boy in whom the polio virus was cultured, as a pioneer willing to act as a human incubator for the polio vaccine despite not being able to benefit from it himself. What was not revealed in these stories, as presented in this forum to promote “Cure,” were the downstream effects of altruistic participation. The Lacks family has little to no access to healthcare, and Sarkett, who retired on a small disability income and social security, is unable to pay for a new set of crutches (<mark style="background: #ADCCFFA6;">[Fabregas & Bails, 2005](https://triblive.com/x/pittsburghtrib/news/regional/s_319392.html)</mark>). Although in both of these cases the hospitals and researchers developing these biological tools and vaccine made no profit from their discoveries, they received no recognition. Jonas Salk was often referred to as the People’s Scientist, yet the hospitals have celebrated these accomplishments with little recognition for the patients that made them possible. In the Lacks case, the family requested that a wing of John Hopkins Medical School be named after Henrietta, but there has been no such response as shown in the video below.
+In her presentation, she presumes that if Henrietta Lacks had realized how many children’s lives would be saved by the polio vaccine, she would not have wanted a cent for her part in creating the cell line that led to its development. She also describes a young Jimmy Sarkett, the boy in whom the polio virus was cultured, as a pioneer willing to act as a human incubator for the polio vaccine despite not being able to benefit from it himself. What was not revealed in these stories, as presented in this forum to promote “Cure,” were the downstream effects of altruistic participation. The Lacks family has little to no access to healthcare, and Sarkett, who retired on a small disability income and social security, is unable to pay for a new set of crutches ([Fabregas & Bails, 2005](https://triblive.com/x/pittsburghtrib/news/regional/s_319392.html)). Although in both of these cases the hospitals and researchers developing these biological tools and vaccine made no profit from their discoveries, they received no recognition. Jonas Salk was often referred to as the People’s Scientist, yet the hospitals have celebrated these accomplishments with little recognition for the patients that made them possible. In the Lacks case, the family requested that a wing of John Hopkins Medical School be named after Henrietta, but there has been no such response as shown in the video below.
 
 <mark style="background: #FFF3A3A6;">Video: March 15, 2010. The Immortal Henrietta Lacks. CBSnews. [Link](http://www.cbsnews.com/news/the-immortal-henrietta-lacks/)</mark>
 
