PUSH NOTE : 8. Altruistic Donor, Paid Research Subject, or Savvy Negotiator.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/8. Altruistic Donor, Paid Research Subject, or Savvy Negotiator.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/8. Altruistic Donor, Paid Research Subject, or Savvy Negotiator.md
@@ -20,13 +20,13 @@ In her presentation, she presumes that if Henrietta Lacks had realized how many 
 
 Similarly, when the University of Pittsburgh School of Pharmacy developed learning tools for the 50th anniversary of the launch of the Salk polio vaccine, they did not include Jimmy Sarkett’s contributions in the timeline associated with the awareness project and documentary titled “<mark style="background: #ADCCFFA6;">[A Shot Heard Around the World](http://www.shotfeltroundtheworld.com/press/index.php)</mark>.” Ironically, Sarkett was interviewed for some of the promotional materials and upon learning about his situation, the University of Pittsburgh Medical Center and a local orthotics center donated new crutches to him (<mark style="background: #ADCCFFA6;">[Fabregas & Bails, 2005](http://www.pittsburghlive.com/x/pittsburghtrib/news/regional/s_319392.html#ixzz1pvnEWcgE)</mark>).
 
-As Palmer remarks in his editorial “Private Reparations” in the Hastings Center Report, philanthropic efforts, such as the establishment of Skloot’s Lacks Foundation, does little to address the inequity that exists between researchers and human subjects (<mark style="background: #ADCCFFA6;">[Palmer, 2010](http://www.thehastingscenter.org/Publications/HCR/Detail.aspx?id=4967)</mark>). Furthermore, most acknowledgement is reactive, an attempt to minimize threat to one’s position and privilege once an injustice is revealed. The Nature editorial “Justice for All” highlights the need not just for acknowledgement, but legitimate recognition for harms committed in the name of scientific progress (<mark style="background: #ADCCFFA6;">[Anonymous, 2012](http://www.nature.com/nature/journal/v484/n7394/full/484287a.html)</mark>). This short editorial lists many cases in which financial reparations were secured for those who may have been harmed and/or unknowingly participated in biomedical research. These state and national orders to provide reparations are in some ways methods for biomedical science to “save face.” This diversity of opinions is reflected within the Lacks family regarding compensation for speaking engagements versus acknowledgement and reparations on a systemic level (<mark style="background: #ADCCFFA6;">[Hendrix, 2017](https://www.washingtonpost.com/local/on-the-eve-of-an-oprah-movie-about-henrietta-lacks-an-ugly-feud-consumes-the-family/2017/03/28/d33d3418-1248-11e7-ada0-1489b735b3a3_story.html?utm_term=.c85e6918a092)</mark>).
+As Palmer remarks in his editorial “Private Reparations” in the Hastings Center Report, philanthropic efforts, such as the establishment of Skloot’s Lacks Foundation, does little to address the inequity that exists between researchers and human subjects (<mark style="background: #ADCCFFA6;">[Palmer, 2010](http://www.thehastingscenter.org/Publications/HCR/Detail.aspx?id=4967)</mark>). Furthermore, most acknowledgement is reactive, an attempt to minimize threat to one’s position and privilege once an injustice is revealed. The Nature editorial “Justice for All” highlights the need not just for acknowledgement, but legitimate recognition for harms committed in the name of scientific progress ([Anonymous, 2012](http://www.nature.com/nature/journal/v484/n7394/full/484287a.html)). This short editorial lists many cases in which financial reparations were secured for those who may have been harmed and/or unknowingly participated in biomedical research. These state and national orders to provide reparations are in some ways methods for biomedical science to “save face.” This diversity of opinions is reflected within the Lacks family regarding compensation for speaking engagements versus acknowledgement and reparations on a systemic level ([Hendrix, 2017](https://www.washingtonpost.com/local/on-the-eve-of-an-oprah-movie-about-henrietta-lacks-an-ugly-feud-consumes-the-family/2017/03/28/d33d3418-1248-11e7-ada0-1489b735b3a3_story.html?utm_term=.c85e6918a092)).
 
-Similarly, in viewing the congressional records regarding the Henrietta Lacks Case, in 1997 and 2010, it is understandable that policymakers would request such acknowledgement to maintain both their constituency base and economic growth as a result of biomedical research in their districts (<mark style="background: #ADCCFFA6;">[Perriello, 2010](http://www.gpo.gov/fdsys/pkg/CREC-2010-05-28/pdf/CREC-2010-05-28-pt1-PgE1008-3.pdf); [Ehrlich, 1997](https://www.gpo.gov/fdsys/pkg/CREC-1997-06-04/pdf/CREC-1997-06-04-pt1-PgE1109.pdf)</mark>) (<mark style="background: #FFF3A3A6;">[Slide 10: Congressional Records](http://stemcellcurriculum.org/slidesets.html)</mark>). Each request was made shortly after the public learned about Henrietta Lacks’ story, first by Curtis’ film on the BBC program Modern Times in 1997 (<mark style="background: #ADCCFFA6;">[Curtis, 1997](http://www.archive.org/details/AdamCurtisTheWayofAllFlesh/)</mark>) and, subsequently, with the publication of Rebecca Skloot’s book The Immortal Life of Henrietta Lacks in 2010 (<mark style="background: #ADCCFFA6;">[Skloot, 2010](http://rebeccaskloot.com/the-immortal-life/)</mark>). Notably, in the congressional records, the words “contribution” and “given” appear, though Lacks was never made aware that her tissue was being used in research.
+Similarly, in viewing the congressional records regarding the Henrietta Lacks Case, in 1997 and 2010, it is understandable that policymakers would request such acknowledgement to maintain both their constituency base and economic growth as a result of biomedical research in their districts ([Perriello, 2010](http://www.gpo.gov/fdsys/pkg/CREC-2010-05-28/pdf/CREC-2010-05-28-pt1-PgE1008-3.pdf); [Ehrlich, 1997](https://www.gpo.gov/fdsys/pkg/CREC-1997-06-04/pdf/CREC-1997-06-04-pt1-PgE1109.pdf)) (<mark style="background: #FFF3A3A6;">[Slide 10: Congressional Records](http://stemcellcurriculum.org/slidesets.html)</mark>). Each request was made shortly after the public learned about Henrietta Lacks’ story, first by Curtis’ film on the BBC program Modern Times in 1997 ([Curtis, 1997](http://www.archive.org/details/AdamCurtisTheWayofAllFlesh/)) and, subsequently, with the publication of Rebecca Skloot’s book The Immortal Life of Henrietta Lacks in 2010 ([Skloot, 2010](http://rebeccaskloot.com/the-immortal-life/)). Notably, in the congressional records, the words “contribution” and “given” appear, though Lacks was never made aware that her tissue was being used in research.
 
-Because human research subjects and biomedical researchers recognize the value of human biological material, much activism to address the value of this biocapital has emerged. As Lori Andrews remarks in her book Body Bazaar, a tissue movement seems to be emerging in which patients or human subjects are reigning in their rights to control what happens with their bodily tissues and DNA (<mark style="background: #ADCCFFA6;">[Fahy & Nisbet, 2013](http://www.the-scientist.com/?articles.view/articleNo/36098/title/Debating-Bioethics-Openly/)</mark>). Such shifts are apparent with the emergence of the trade journal <mark style="background: #ADCCFFA6;">[Guinea Pig Zero](http://www.guineapigzero.com/)</mark>, which adopts practices familiar to the labor movement to organize for autonomy and protections for human research subjects. Two cases are commonly used to highlight these efforts. The first is that of John Moore, a cancer patient who sued the Regents of the University of California for patenting a cell line made from his body without informing him of the value of such a cell line in the development of cancer therapies. Moore was repeatedly subjected to blood draws and clinical testing so that his physician could acquire more biological material to study, yet, the physician evaded discussions of the non-therapeutic nature of these studies with Moore. Moore, who reacted to his situation after learning of the true intent of his blood work, lost his case in 1990.
+Because human research subjects and biomedical researchers recognize the value of human biological material, much activism to address the value of this biocapital has emerged. As Lori Andrews remarks in her book Body Bazaar, a tissue movement seems to be emerging in which patients or human subjects are reigning in their rights to control what happens with their bodily tissues and DNA ([Fahy & Nisbet, 2013](http://www.the-scientist.com/?articles.view/articleNo/36098/title/Debating-Bioethics-Openly/)). Such shifts are apparent with the emergence of the trade journal [Guinea Pig Zero](http://www.guineapigzero.com/), which adopts practices familiar to the labor movement to organize for autonomy and protections for human research subjects. Two cases are commonly used to highlight these efforts. The first is that of John Moore, a cancer patient who sued the Regents of the University of California for patenting a cell line made from his body without informing him of the value of such a cell line in the development of cancer therapies. Moore was repeatedly subjected to blood draws and clinical testing so that his physician could acquire more biological material to study, yet, the physician evaded discussions of the non-therapeutic nature of these studies with Moore. Moore, who reacted to his situation after learning of the true intent of his blood work, lost his case in 1990.
 
-In the second commonly used case, Ted Slavin, a Hepatitis B patient, took steps proactively to protect his unique biological material. Slavin, upon learning the value of his biological samples for Hepatitis B antibody production, patented his own blood and began selling it to researchers on his own. He then donated the profits to non-profit research centers of his choosing. In an attempt to keep the information and material in the hands of patients, Slavin also formed Essential Biologicals, a company designed to collect and distribute blood that contained unique or useful biomarkers. By securing patent rights, it could be argued that Slavin prevented a monopoly of knowledge, and rather, contributed to the open access movement in science (<mark style="background: #ADCCFFA6;">[Landecker, 1999](http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=1456660); [Skloot, 2010](http://rebeccaskloot.com/the-immortal-life/); [Truog, 2012](http://science.sciencemag.org/content/337/6090/37.short)</mark>).
+In the second commonly used case, Ted Slavin, a Hepatitis B patient, took steps proactively to protect his unique biological material. Slavin, upon learning the value of his biological samples for Hepatitis B antibody production, patented his own blood and began selling it to researchers on his own. He then donated the profits to non-profit research centers of his choosing. In an attempt to keep the information and material in the hands of patients, Slavin also formed Essential Biologicals, a company designed to collect and distribute blood that contained unique or useful biomarkers. By securing patent rights, it could be argued that Slavin prevented a monopoly of knowledge, and rather, contributed to the open access movement in science ([Landecker, 1999](http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=1456660); [Skloot, 2010](http://rebeccaskloot.com/the-immortal-life/); [Truog, 2012](http://science.sciencemag.org/content/337/6090/37.short)).
 
 Though Moore and Slavin acted individually to shake up the status quo, by participating in the structures and systems that are in place to negotiate such terrain, race scholar Ruha Benjamin reminds us that some populations are choosing a different tactic, that of “organized ambivalence” (<mark style="background: #ADCCFFA6;">Benjamin, 2011</mark>). Her ethnographic work on stem cell therapies in communities that are disproportionately affected by sickle cell anemia suggests a need for community rather than individual actions, because
 
@@ -36,4 +36,4 @@ She posits that:
 
 > “organized ambivalence is an analytic alternative to individualized notions of distrust and as a framework for implementing more participatory research initiatives that better account for the multiple uncertainties characteristic of regenerative medicine.” (<mark style="background: #ADCCFFA6;">[Benjamin, 2011](http://www.ruhabenjamin.com/a/wp-content/uploads/2015/08/Organized-Ambivalence.pdf)</mark>)
 
-Because Benjamin’s work emerges from her focus on stem cell research in California, a flurry of editorials and academic papers have proposed revisiting payments for research subjects, or donors, to incentivize participation and donation within the context of stem cell therapies and research (<mark style="background: #ADCCFFA6;">[VanderWalde & Kurzban, 2011](http://www.ncbi.nlm.nih.gov/pubmed/21871049); [Truog, 2012](http://science.sciencemag.org/content/337/6090/37.short); [Kominers & Becker, 2012](https://www.sciencemag.org/content/337/6100/1292.2.full); [Hayflick, 2013](http://science.sciencemag.org/content/337/6100/1292.1)</mark>). This is particularly true for those human tissues and cells that are capable of regeneration, or normally discarded as medical waste, such as umbilical cord blood. Mohapatra has highlighted the lack of altruistic donation for umbilical cord blood to public stem cell banks and has proposed that incentives such as tax credits, or reduced medical costs, be put in place to incentivize donations, especially in light of the lack of diversity in current cord blood units (<mark style="background: #ADCCFFA6;">[Mohapatra, 2013](http://lawreview.colorado.edu/wp-content/uploads/2013/11/10.-Mohaptra_703_s.pdf)</mark>). Most recently, Nicola Lacetera and others provided data to refute the notion that non-cash incentives decrease altruistic donation or reduce the quality of samples (<mark style="background: #ADCCFFA6;">[Lacetera et.al, 2013 podcast](http://science.sciencemag.org/content/340/6135/927.short)</mark>).
+Because Benjamin’s work emerges from her focus on stem cell research in California, a flurry of editorials and academic papers have proposed revisiting payments for research subjects, or donors, to incentivize participation and donation within the context of stem cell therapies and research ([VanderWalde & Kurzban, 2011](http://www.ncbi.nlm.nih.gov/pubmed/21871049); [Truog, 2012](http://science.sciencemag.org/content/337/6090/37.short); <mark style="background: #ADCCFFA6;">[Kominers & Becker, 2012](https://www.sciencemag.org/content/337/6100/1292.2.full)</mark>; [Hayflick, 2013](http://science.sciencemag.org/content/337/6100/1292.1)). This is particularly true for those human tissues and cells that are capable of regeneration, or normally discarded as medical waste, such as umbilical cord blood. Mohapatra has highlighted the lack of altruistic donation for umbilical cord blood to public stem cell banks and has proposed that incentives such as tax credits, or reduced medical costs, be put in place to incentivize donations, especially in light of the lack of diversity in current cord blood units ([Mohapatra, 2013](http://lawreview.colorado.edu/wp-content/uploads/2013/11/10.-Mohaptra_703_s.pdf)). Most recently, Nicola Lacetera and others provided data to refute the notion that non-cash incentives decrease altruistic donation or reduce the quality of samples ([Lacetera et.al, 2013 podcast](http://science.sciencemag.org/content/340/6135/927.short)).
