PUSH NOTE : 3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/3. How Does Tissue Culture Technology Contribute to Steam Cell Research (SCR)?.md
@@ -6,12 +6,11 @@ title: 3. How Does Tissue Culture Technology Contribute to Steam Cell Research (
 aliases:
   - Section III
 ---
-
 # History of Cell Culture
 
 Cell culture techniques began in the 1800s, but the ability to keep a cell alive in culture was the accomplishment of Ross Harrison, who in 1907 cultured a nerve cell for several weeks using the “hanging drop method.” Over the next forty years a number of inventions and discoveries led to further advances in cell culture. Thomas Montrose Burrows discovered the medium of chicken embryo plasma clots as being essential for propagation of cells in culture, and coined the term “tissue culture,” Alexis Carrel was the first to establish sterile technique for cell purity, George Gey in 1933 was the first to invent the cell culture roller, which provided adequate air flow, and Wilton Earle in 1943 established the first continuously growing culture of mammalian cells, and later established the first clonal mouse immortalized cells, known as the L cell line ([Maienschein, 2005](http://www.amazon.com/Whose-View-Life-Embryos-Cloning/dp/0674017668)). (<mark style="background: #FFF3A3A6;">[Slide 27: Be Still My Beating Heart](http://stemcellcurriculum.org/slidesets.html)</mark>)
 
-![[PPT_s27.png|PPT_s27.png]]
+%%![[PPT_s27.png|PPT_s27.png]]%%
 
 > [!info]- Beating Heart in a Dish
 > In 1912, Alexis Carrel claimed that he was able to demonstrate the immortality of somatic differentiated cells in culture with his famous chick beating heart culture.  Having won the Nobel Prize for his work on suturing of blood vessels, Carrel created an in vitro environment in which he could pump fluid to a disembodied organ. He fed a chick beating heart culture with growth media for almost 40 by years, yet no one else could replicate his results. It was later discovered by Hayflick and Moorhead,  that in fact the cells were not immortal, but that most probably the culture media was either contaminated with viruses that transformed the heart cells into immortal cells, activating telomerase, or that he was continually supplying the culture with fresh stem cells as they reside in the chicken blood he was using for culture. Students may want to reflect on the scientific method and consider how  Carrel have conducted his experiment to eliminate any change of contamination- What was missing in his experimental design? Later Hayflick and Moorhead proposed the existence of a limit of cell divisions and the idea of something that counts the number of divisions. 
