PUSH NOTE : 1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md

--- a/docs/HeLa Cells & HPV Genes_Immortality & Cancer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
+++ b/docs/HeLa Cells & HPV Genes_Immortality & Cancer/1. How Have Human Tissues and Cells Been Used for Biomedical Research?.md
@@ -7,10 +7,12 @@ aliases:
   - Section I
 weight: "1"
 ---
-
 # Biomedical research, or experimental medicine, is a combination of basic and applied research done in the interest of promoting a healthy population.
 
 The World Health Organization’s (WHO) definition, issued in 1946, implied a normative connotation when describing “healthy” as a “state of complete physical, mental, and social well being” ([WHO, 1946](http://www.who.int/governance/eb/who_constitution_en.pdf)). Later definitions continued to reference “the absence of disease or infirmity” as an indicator of a healthy state, thereby relegating people living with disease and disability to an “unhealthy” category. Using these definitions, one can only be part of a healthy population if their disease/disability is treated, or cured, which first requires diagnosis.
+
+TEST
+
 
 Thus, an individual’s health is assessed using diagnostic tests that measure physical and cognitive abilities in a changing environment and comparing these results to a reference standard. When reduced ability, or disease, emerges, researchers use these cases as opportunities to investigate possible causes. The approach can be medical, seeking to understand, or address, the molecular processes that contribute to disease or disability. Alternatively, the approach can be social, investigating how our current and future environments are hindering some persons from contributing to society and living a full life, without social barriers. In some cases, the social model attempts to address the oppression felt by those living with impairment as a result of discriminatory practices ([Shakespeare, 2002](https://www.um.es/discatif/PROYECTO_DISCATIF/Textos_discapacidad/00_Shakespeare2.pdf)). A contemporary approach looks at the intersection of the biomedical and social models of health by investigating how social factors such as stress, poverty, and racism hijack molecular processes resulting in chronic disease/disability and increased mortality ([Eisenberg, 1999](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3455991/); [Galea et al., 2011](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3134519/); [Radley et al., 2011](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3641164/)).
 
